@@ -1,0 +1,30 @@
+<?php
+
+  /**
+   * This file is part of the Achievo ATK distribution.
+   * Detailed copyright and licensing information can be found
+   * in the doc/COPYRIGHT and doc/LICENSE files which should be
+   * included in the distribution.
+   *
+   * @package atk
+   * @subpackage include
+   *
+   * @copyright (c)2000-2004 Ibuildings.nl BV
+   * @license http://www.achievo.org/atk/licensing ATK Open Source License
+   *
+   * @version $Revision: $
+   * $Id: $
+   */
+
+  require_once($config_atkroot."atk/class.atkconfig.inc");
+  require_once($config_atkroot."atk/defaultconfig.inc.php");
+
+  // Auto-register modules
+  if (file_exists("$config_module_path/config.modules.inc"))
+  {
+    include_once("$config_module_path/config.modules.inc");
+  }
+
+  require_once($config_application_dir."config.inc.php");
+
+?>
